--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Retro.png" alt="Retro Font" /></td>
+      <td><img src="IMAGES/Retro.png" alt="Retro Font" /></td>
       <td><h1>GERALD HENNINGS</h1>
     <p><em>Artist and owner of <strong><a href="https://www.dos-modeofficial.com">Dos-Mode.</a></strong></em></p>
     <p>Im an artist, a musician and a web programmer currently living in Minnesota.</p>
